# LocusNexus

./: .gitignore  MANIFESTO.md  README.md
docs/: capabilities.md  locus_for_agents.md
docs/articles/: README.md  safety-through-transparency.md  the-mem-effect-in-action.md  the-phantom-of-the-handler.md  the-phantom-of-the-stage.md
docs/design/: assurance-dispatch.md  assurance-scope-combinators.locus  database-access.md  database-implementation.md  level-enforcement.md  rust-service-plugins.md  sealing-enforcement-gap.md  sealing-escalation-repro.locus  sealing-semantics.md
docs/guide/: agents.md  bindings-and-functions.md  download.md  effects-and-handlers.md  expressions-and-control.md  getting-started.md  how-it-compiles.md  ide.md  index.md  lexical-structure.md  modules-and-capabilities.md  reference.md  staging.md  standard-library.md  traits.md  values-and-types.md
formal/: Handlers.lean  LocusCalculus.lean  README.md  Substitution.lean  lake-manifest.json  lakefile.toml
gui_runit/: canvas_vs_fillrect.locus  console_io_demo.locus  ide_demo.locus  julia.locus  julia_anim.locus  loop_vs_recursion.locus  mandelbrot.locus  mandelbrot_canvas.locus  minesweeper_gui.locus  othello_gui.locus
locus/: Cargo.toml
locus-gc/: Cargo.toml
locus-gc/src/: lib.rs
locus-gc/tests/: auto_collect.rs  captures.rs  conservative.rs  escape.rs  generational.rs  handle_scope.rs  oracle.rs  stats.rs
locus-ide/: Cargo.toml
locus-ide/src/: lib.rs  main.rs  report.rs  session.rs
locus-igui/: Cargo.toml
locus-igui/src/: batch.rs  channels.rs  child.rs  console_bridge.rs  cp_exports.rs  crash_view.rs  doc_pane.rs  fconsole.rs  fedit.rs  help_pane.rs  lib.rs  log_view.rs  menu.rs  prefs.rs  repl_pane.rs  tools_menu.rs  window.rs
locus-libc/: Cargo.toml  README.md
locus-libc/src/: lib.rs
locus-llvm/: Cargo.toml
locus-llvm/src/: aot.rs  asm_runtime.rs  effects.catalog  jit.rs  lib.rs  lower.rs  main.rs  mcp.rs  mcp_main.rs  plugins.rs  runtime.rs  winapi_resolve.rs
locus-plugin/: Cargo.toml
locus-plugin/src/: lib.rs
locus-rt/: Cargo.toml
locus-rt/src/: lib.rs
locus-winapi/: Cargo.toml  build.rs
locus-winapi/src/: data_schema.rs  lib.rs
locus/src/: analysis.rs  capability.rs  check.rs  diag.rs  evidence.rs  help.rs  iface.rs  ir.rs  lib.rs  main.rs  parse.rs  prelude.rs  sema.rs  stackdiag.rs  stage.rs  stdlib.rs  syntax.rs  tagcheck.rs  unify.rs
locus/src/stdlib/: agent.locus  agentrt.locus  array.locus  arrayrt.locus  bool.locus  console.locus  crt.locus  db.locus  docsfs.locus  event.locus  fun.locus  graphics.locus  ide_event.locus  ide_graphics.locus  list.locus  locusenv.locus  math.locus  num.locus  option.locus  order.locus  random.locus  result.locus  string.locus  stringrt.locus  time.locus  winapi.locus
locus/src/stdlib/linux/: console.locus  docsfs.locus  libc.locus  libm.locus  locusenv.locus  math.locus  time.locus
locus/src/unify/: oracle.rs
locus/tests/: emit_interface.rs
plugins/sqlite/: Cargo.toml
plugins/sqlite/locus/: db.locus  sqlite.locus  sqlite_boundary.locus  sqlite_disk.locus  vault_boundary.locus
plugins/sqlite/src/: lib.rs
ports/linux-x86_64/: Cargo.toml  README.md
ports/linux-x86_64/src/: asm_runtime.rs  main.rs
